<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGuest">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/guestName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        style="@style/editTextStyle"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_guest_name"/>
    <EditText
        android:id="@+id/guestAdds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        style="@style/editTextStyle"
        android:hint="@string/enter_address"/>
    <EditText
        android:id="@+id/guestEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        style="@style/editTextStyle"
        android:hint="@string/enter_email"/>
    <EditText
        android:id="@+id/guestPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        style="@style/editTextStyle"
        android:hint="@string/enter_phone_no"/>
    <EditText
        android:id="@+id/guestCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        style="@style/editTextStyle"
        android:hint="@string/enter_company_name"/>
    <EditText
        android:id="@+id/guestDesign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        style="@style/editTextStyle"
        android:hint="@string/enter_designation"/>
    <EditText
        android:id="@+id/guestDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        style="@style/editTextStyle"
        android:hint="@string/enter_description"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submitGuest"
        android:onClick="createGuestSubmit"
        android:text="@string/create_guest"
        style="@style/buttonStyle"/>

</LinearLayout>
</ScrollView>