<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUser">
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/iconLogIn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/ic_login" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editTextStyle"
        android:inputType="textPersonName"
        android:hint="@string/enter_full_name"/>

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        style="@style/editTextStyle"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email" />

    <EditText
        android:id="@+id/userMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        style="@style/editTextStyle"
        android:hint="@string/mobile_no" />

    <EditText
        android:id="@+id/userPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        style="@style/editTextStyle"
        android:hint="@string/user_password"/>


    <Spinner
        android:id="@+id/userDepartment"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:spinnerMode="dropdown"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        />

    <Spinner
        android:id="@+id/userRole"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:spinnerMode="dropdown"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        />

    <EditText
        android:id="@+id/userDesignation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        style="@style/editTextStyle"
        android:hint="@string/enter_designation" />

    <ImageButton
        android:id="@+id/userImage"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createUserSubmit"
        android:text="@string/create_user"
        style="@style/buttonStyle"
        />
</LinearLayout>

</ScrollView>