<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <EditText
        android:id="@+id/titleText"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        style="@style/editTextStyle"
        android:layout_height="wrap_content"
        android:hint="@string/event_title"
        android:inputType="textPersonName"/>
    <Spinner
        android:id="@+id/spinnerEventType"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/eventType_array"/>

    <EditText
        android:id="@+id/dateText"
        android:layout_width="match_parent"
        android:hint="@string/date_of_event"
        android:layout_height="wrap_content"
        android:inputType="date"
        style="@style/editTextStyle"/>

    <EditText
        android:id="@+id/venueText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/venue"
        style="@style/editTextStyle"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/spinnerGuests"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/enter_designation"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        style="@style/editTextStyle"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/eventImg"
        android:layout_margin="30dp"
        android:src="@drawable/ic_login"/>

    <Button
        android:layout_width="match_parent"
        style="@style/buttonStyle"
        android:onClick="createEventSubmit"
        android:layout_height="wrap_content"
        android:id="@+id/createEventButton"
        android:text="@string/create_event" />
    </LinearLayout>
</ScrollView>