<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActive">


    <ImageView
        android:id="@+id/userPic"
        android:layout_width="150dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createUser"
        style="@style/buttonStyle"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/create_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userPic" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createEvent"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createUser"
        style="@style/buttonStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/eventList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/event_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createEvent"
        style="@style/buttonStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createGuest"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:text="@string/create_guest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventList"
        style="@style/buttonStyle"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/guestList"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:text="@string/guest_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createGuest"
        style="@style/buttonStyle"/>


</androidx.constraintlayout.widget.ConstraintLayout>