<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iconLogIn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="90sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_login" />

    <EditText
        android:id="@+id/logInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editTextStyle"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/iconLogIn"
        android:hint="@string/enter_email" />

    <EditText
        android:id="@+id/logInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/editTextStyle"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        app:layout_constraintTop_toBottomOf="@id/logInEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logInButton"
        style="@style/buttonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:clickable="false"
        android:onClick="logIn"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logInPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>